<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/weather_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowRadius="4"
        android:text="@string/sign_in"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="251dp"
        android:layout_height="36dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/sign_in_to_continue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:hint="Your E-Mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill,HardcodedText,LabelFor,RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="forgot password?"
        android:textColor="#0A0A0B"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="126dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#303F9F"
        android:text="Login"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.989"
        app:layout_goneMarginEnd="20dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="126dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00796B"
        android:paddingEnd="15dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>