<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_color"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:hint="Your E-Mail"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,HardcodedText,LabelFor,RtlSymmetry,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="6dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill,HardcodedText,LabelFor,RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/enter_your_passwords"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="Repeat password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:shadowDy="4"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="126dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00796B"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="126dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#303F9F"
        android:paddingEnd="20dp"
        android:text="Register"
        android:textSize="19sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,RtlSymmetry,TextSizeCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_text_shape"
        android:drawableLeft="@drawable/google"
        android:paddingStart="8dp"
        android:paddingEnd="5dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded,SpUsage,TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="244dp"
        android:layout_height="41dp"
        android:layout_marginTop="108dp"
        android:textColor="@color/black"
        android:text="Sign up to continue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>